--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,8 @@
       "_types",
       "bun.lockb",
       "docs",
-      "dist"
+      "dist",
+      "src"
     ]
   },
   "organizeImports": {
@@ -23,7 +24,7 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true,
+      "recommended": false,
       "suspicious": {
         "noExplicitAny": "warn"
       },
