--- a/package.json
+++ b/package.json
@@ -46,7 +46,11 @@
 			"default": "./_cjs/modules/index.js"
 		}
 	},
-	"files": ["dist/*", "README.md", "src"],
+	"files": [
+		"dist/*",
+		"README.md",
+		"src"
+	],
 	"scripts": {
 		"format": "biome format . --write",
 		"lint": "biome check .",
@@ -101,7 +105,7 @@
 		"size-limit": "^11",
 		"tsc-alias": "^1.8.8",
 		"tslib": "^2.6.2",
-		"typedoc": "^0.25.9",
+		"typedoc": "^0.28.14",
 		"vitest": "^1.3.1"
 	},
 	"peerDependencies": {
@@ -109,7 +113,9 @@
 		"viem": "^2"
 	},
 	"commitlint": {
-		"extends": ["@commitlint/config-conventional"]
+		"extends": [
+			"@commitlint/config-conventional"
+		]
 	},
 	"simple-git-hooks": {
 		"pre-commit": "bun run format && bun run lint:fix",
